--- a/index.htm
+++ b/index.htm
@@ -10,8 +10,8 @@
     <h1 class="text-uppercase" align="center">mcu</h1>
     <h2 class="text-lowercase">hii</h2>
     <div class="bottom-container"  id="bottom">
-      <h4 style="float:left; margin-left:10%;margin-bottom:5%;color:#ac4b1c;"  >welcome </h4>
-      <h4 style="float:right; margin-right:10%;margin-bottom:5%;color:#ac4b1c;" > Developer</h4>
+      <h4 style="float:left; margin-left:10%;margin-bottom:5%;color:#ac4b1c;"  >welcome to </h4>
+      <h4 style="float:right; margin-right:10%;margin-bottom:5%;color:#ac4b1c;" > Developer's world</h4>
     </div>
 
 
