--- a/index.htm
+++ b/index.htm
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body >
-    <h1 class="text-uppercase" align="center">mcu</h1>
-    <h2 class="text-lowercase">hii</h2>
+    <h1 class="text-uppercase" align="center">hello</h1>
+    <h2 class="text-lowercase">THIS IS SAMHITHA</h2>
     <div class="bottom-container"  id="bottom">
       <h4 style="float:left; margin-left:10%;margin-bottom:5%;color:#ac4b1c;"  >welcome to </h4>
       <h4 style="float:right; margin-right:10%;margin-bottom:5%;color:#ac4b1c;" > Developer's world</h4>
